--- a/public/main.html
+++ b/public/main.html
@@ -400,25 +400,101 @@ Gilles Deleuze <br> </i>
    <p>Capítulo Uno</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/01.png" alt="Image 1"></a><br>
    <p>Capítulo Dos</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=29s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/02.png" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=29s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/02.jpg" alt="Image 1"></a><br>
    <p>Capítulo Tres</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=77s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/03.png" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=77s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/03.jpg" alt="Image 1"></a><br>
    <p>Capítulo Cuatro</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=124s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/04.png" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=124s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/04.jpg" alt="Image 1"></a><br>
    <p>Capítulo Cinco</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=182s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/05.png" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=182s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/05.jpg" alt="Image 1"></a><br>
    <p>Capítulo Seis</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=230s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/06.png" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=230s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/06.jpg" alt="Image 1"></a><br>
    <p>Capítulo Siete</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=310s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/07.png" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=310s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/07.jpg" alt="Image 1"></a><br>
    <p>Capítulo Ocho</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=399s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/08.png" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=399s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/08.jpg" alt="Image 1"></a><br>
    <p>Capítulo Nueve</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=454s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/09.png" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=454s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/09.jpg" alt="Image 1"></a><br>
    <p>Capítulo Diez</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=568s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/10.png" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=568s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/10.jpg" alt="Image 1"></a><br>
    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.png" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Doce</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/12.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Trece</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/13.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/14.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/15.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/16.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/17.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/18.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/19.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/20.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/21.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/22.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/23.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Veinticuatro</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/24.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Veinticinco</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/25.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Veintiseis</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/26.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Veintisiete</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/27.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Veinitocho</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/28.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Veintinueve</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/29.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Treinta</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/30.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Treinta Y Uno</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/31.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
