--- a/public/main.html
+++ b/public/main.html
@@ -462,41 +462,117 @@ Gilles Deleuze <br> </i>
    <p>Capítulo Treinta Y Uno</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/31.jpg" alt="Image 1"></a><br>
    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/32.jpg" alt="Image 1"></a><br>
    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/33.jpg" alt="Image 1"></a><br>
    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/34.jpg" alt="Image 1"></a><br>
    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/35.jpg" alt="Image 1"></a><br>
    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/35.jpg" alt="Image 1"></a><br>
    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/37.jpg" alt="Image 1"></a><br>
    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/38.jpg" alt="Image 1"></a><br>
    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/39.jpg" alt="Image 1"></a><br>
    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/40.jpg" alt="Image 1"></a><br>
    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/41.jpg" alt="Image 1"></a><br>
    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/42.jpg" alt="Image 1"></a><br>
    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/43.jpg" alt="Image 1"></a><br>
    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/44.jpg" alt="Image 1"></a><br>
    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/45.jpg" alt="Image 1"></a><br>
    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/46.jpg" alt="Image 1"></a><br>
    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/47.jpg" alt="Image 1"></a><br>
    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/48.jpg" alt="Image 1"></a><br>
+    <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/40.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/41.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/42.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/43.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/44.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/45.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/46.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/47.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/48.jpg" alt="Image 1"></a><br> 
+    <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/49.jpg" alt="Image 1"></a><br> 
+    <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/50.jpg" alt="Image 1"></a><br> 
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/51.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/52.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/53.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/54.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/55.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/56.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/57.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/58.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/59.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/60.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/61.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/62.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/63.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/64.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/65.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/66.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/67.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/68.jpg" alt="Image 1"></a><br> 
+    <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/69.jpg" alt="Image 1"></a><br> 
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/70.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/71.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/72.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/73.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/74.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/75.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/76.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Once</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/77.jpg" alt="Image 1"></a><br>
       <p>lorem ipsum dolor</p>
-      <!-- Add more content here if needed -->
+      <!-- Add more content here if needed -
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Never Even</h3>
@@ -597,6 +673,8 @@ Publicado en <i>Superdigital (Editor: Ciro Najle. CPAU 2018)</i>
       <img class="lazyload" src="assets/img/33_rooms/03.jpg" alt="Image 1">
       <p>Stagggggggger</p>
       <img class="lazyload" src="assets/img/33_rooms/03.jpg" alt="Image 1">
+      <p>Stagggggggggger</p>
+      <img class="lazyload" src="assets/img/33_rooms/04.jpg" alt="Image 1">
       
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
