--- a/public/main.html
+++ b/public/main.html
@@ -459,118 +459,100 @@ Gilles Deleuze <br> </i>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/29.jpg" alt="Image 1"></a><br>
    <p>Capítulo Treinta</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/30.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Treinta Y Uno</p><br>
+   <p>Capítulo Treinta y Uno</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/31.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Treinta y Dos</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/32.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Treinta y Tres</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/33.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Treinta Y Cuatro</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/34.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Treinta y Cinco</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/35.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Treinta y Seis</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/35.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Treinta y Siete</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/37.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Treinta y Ocho</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/38.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Treinta y Nueve</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/39.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Cuarenta</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/40.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Cuarenta y Uno</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/41.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Cuarenta y Dos</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/42.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Cuarenta y Tres</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/43.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Cuarenta y Cuatro</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/44.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Cuarenta y Cinco</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/45.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Cuarenta y Seis</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/46.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Cuarenta y Siete</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/47.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Cuarenta y Ocho</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/48.jpg" alt="Image 1"></a><br>
-    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/40.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/41.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/42.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/43.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/44.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/45.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/46.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/47.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/48.jpg" alt="Image 1"></a><br> 
-    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/49.jpg" alt="Image 1"></a><br> 
-    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/50.jpg" alt="Image 1"></a><br> 
-   <p>Capítulo Once</p><br>
+    <p>Capítulo Cuarenta y Nueve</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/49.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Cincuenta</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/50.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Cincuenta y Uno</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/51.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Cincuenta y Dos</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/52.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Cincuenta y Tres</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/53.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Cincuenta y Cuatro</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/54.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Cincuenta y Cinco</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/55.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Cincuenta y Seis</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/56.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/57.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/58.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/59.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Cincuenta y Siete</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/57.jpg" alt="Image 1"></a><br> 
+    <p>Capítulo Cincuenta y Ocho</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/58.jpg" alt="Image 1"></a><br> 
+    <p>Capítulo Cincuenta y Nueve</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/59.jpg" alt="Image 1"></a><br> 
+   <p>Capítulo Sesenta</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/60.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Sesenta y Uno</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/61.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Sesenta y Dos</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/62.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Sesenta y Tres</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/63.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Sesenta y Cuatro</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/64.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Sesenta y Cinco</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/65.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Sesenta y Seis</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/66.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Sesenta y Siete</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/67.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/68.jpg" alt="Image 1"></a><br> 
-    <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/69.jpg" alt="Image 1"></a><br> 
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Sesenta y Ocho</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/68.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Sesenta y Nueve</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/69.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Setenta</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/70.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Setenta y Uno</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/71.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Setenta y Dos</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/72.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Setenta y Tres</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/73.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Setenta y Cuatro</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/74.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Setenta y Cinco</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/75.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
+   <p>Capítulo Setenta y Seis</p><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/76.jpg" alt="Image 1"></a><br>
-   <p>Capítulo Once</p><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/77.jpg" alt="Image 1"></a><br>
+   <p>Capítulo Setenta y Siete</p><br>
+      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/77.jpg" alt="Image 1"></a><br> 
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -
     </div>
